--- a/quang-cao-google.html
+++ b/quang-cao-google.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi" xmlns="http://www.w3.org/1999/xhtml">
 	
-<!-- Mirrored from webminhthuan.com/quang-cao-google.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:15:35 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
@@ -96,7 +95,7 @@
 	.noidunggiua{margin-top:30px;}
 	.hopbox-tieude{font-size:150%;text-align:left;text-transform:uppercase;font-weight:normal;color:#FF2102;margin-bottom:20px;}
 	.noidunggiua .hopbox{padding-bottom:50px;}
-	.header1{background:#36362e;color:white;padding:5px 0px;font-weight:bold;}
+	.header1{background:#4caf50;color:white;padding:5px 0px;font-weight:bold;}
 	.header1 a{color:white;}
 	.header1 .hopbox-noidung{display:table;margin-left:auto;}
 	.header1 .hopbox-noidung>div{display:table-cell;}
@@ -1315,13 +1314,13 @@
 				<div class="hopbox">
 					<div class="hopbox-noidung">
 						<div class="hotline">
-							<a href="tel:0916789032"><img alt="091 6789 032" src="images/phone.png"> 091 6789 032</a>
+							<a href="tel:0965059812"><img alt="096 5059 812" src="images/phone.png"> 096 5059 812</a>
 						</div>
 						<div class="hotline">
-							<a href="tel:0975888301"><img alt="0975 888 301" src="images/phone.png"> 0975 888 301</a>
+							<a href="tel:0355217613"><img alt="035 5217 613" src="images/phone.png"> 035 5217 613</a>
 						</div>
 						<div class="hotline LastHot">
-							<a href="tel:0947493366"><img alt="09 4749 3366" src="images/phone.png"> 09 4749 3366</a>
+							<a href="tel:0358557305"><img alt="035 8557 305" src="images/phone.png"> 035 8557 305</a>
 						</div>
 					</div>
 				</div>
@@ -1332,7 +1331,7 @@
 				<div class="header2_1">
 					<div class="hopbox">
 						<div class="hopbox-noidung">
-							<a href="index.html"><img alt="Logo thiết kế website Minh Thuận" src="images/logo.png"></a>
+							<a href="index.html"><img alt="Logo thiết kế website Nhanh" src="images/logo.PNG"></a>
 						</div>
 					</div>
 				</div>
@@ -1468,7 +1467,7 @@
 									<div>
 										<p>Google Ads (còn gọi là Quảng cáo trên Google tại vị trí nhà tài trợ - Liên kết được tài trợ) cho phép các nhà tài trợ trả tiền cho Google để được liệt kê ở những vị trí ngay trong trang đầu tiên khi khách hàng tìm kiếm với những từ khóa nhất định.</p>
 										<p>Google Ads sẽ làm cho các nhà tài trợ có thể tiếp thị được website của mình đến đúng đối tượng khách hàng một cách có chọn lọc và hiệu quả nhất. Vì khi đứng ở trong TOP trên Google, các nhà tài trợ rất dễ dàng thu hút các khách hàng tiềm năng truy cập vào website của mình.</p>
-										<p>Dịch vụ Google Ads đã khá phổ biến tại Việt Nam nên trong bài giới thiệu này <strong><span style="color: #017dc7;">MINH</span> <span style="color: #f68121;">THUẬN</span></strong> sẽ chỉ đề đến những điểm chính về dịch vụ này giúp khách hàng hiểu rõ lợi ích và quyền lợi của mình khi sử dụng dịch vụ Google Ads.</p>
+										<p>Dịch vụ Google Ads đã khá phổ biến tại Việt Nam nên trong bài giới thiệu này <strong><span style="color: #017dc7;">WEB</span> <span style="color: #f68121;">NHANH</span></strong> sẽ chỉ đề đến những điểm chính về dịch vụ này giúp khách hàng hiểu rõ lợi ích và quyền lợi của mình khi sử dụng dịch vụ Google Ads.</p>
 										<p>
 											<img alt="Quảng cáo Google Ads" src="images/qcgoogleads.png" style="width:100%;">
 										</p>
@@ -1498,12 +1497,12 @@
 											<li>Ngân sách càng lớn thì có thể quảng cáo với nhiều từ khóa.</li>
 											<li>Thời gian quảng cáo càng  dài thì sẽ càng có nhiều khách hàng click vào và sẽ cần ngân sách cao hơn.</li>
 										</ul>
-										<p class="dongnote"><i class="fa fa-edit"></i> <strong><span style="color: #017dc7;">MINH</span> <span style="color: #f68121;">THUẬN</span></strong> sẽ tư vấn cho khách hàng tìm từ khóa, thiết kế lời quảng cáo, xác định thời gian quảng cáo để Có mức Chi phí tối ưu nhất.</p>
+										<p class="dongnote"><i class="fa fa-edit"></i> <strong><span style="color: #017dc7;">WEB</span> <span style="color: #f68121;">NHANH</span></strong> sẽ tư vấn cho khách hàng tìm từ khóa, thiết kế lời quảng cáo, xác định thời gian quảng cáo để Có mức Chi phí tối ưu nhất.</p>
 										<h2>MỘT SỐ CÂU HỎI THƯỜNG GẶP</h2>
 										<h3>GOOGLE TÍNH CHI PHÍ CỦA TỪ KHÓA NHƯ THẾ NÀO?</h3>
 										<p>Chi phí dành cho mỗi Từ khóa sẽ được Google đem ra đấu giá giữa những nhà tài trợ. Ai trả giá cao nhất thì sẽ được đứng đầu. Nên chi phí từ khóa sẽ không cố định mà chỉ có mức trung bình. Chi phí cho từ khóa tỷ lệ thuận với mức độ cạnh tranh, cạnh tranh cao - giá cao, cạnh tranh ít - giá thấp.</p>
 										<h3>CHI PHÍ PHẢI TRẢ CHO MỖI LƯỢT CLICK PHỤ THUỘC VÀO GÌ?</h3>
-										<p>Chi phí trả cho mỗi lượt click vào quảng cáo phụ thuộc chủ yếu vào điểm chất lượng (Quality Score). Điểm chất lượng cao chứng tỏ quảng cáo của bạn tốt, và chi phí phải trả cho mỗi lượt Click vào quảng cáo sẽ thấp. <strong><span style="color: #017dc7;">MINH</span> <span style="color: #f68121;">THUẬN</span></strong> sẽ thiết kế câu quảng cáo ấn tượng, thu hút để Khách hàng tiềm năng sẽ Click vào quảng cáo và đồng thời sao cho Google đánh giá điểm chất lượng của quảng cáo đạt mức cao nhất.</p>
+										<p>Chi phí trả cho mỗi lượt click vào quảng cáo phụ thuộc chủ yếu vào điểm chất lượng (Quality Score). Điểm chất lượng cao chứng tỏ quảng cáo của bạn tốt, và chi phí phải trả cho mỗi lượt Click vào quảng cáo sẽ thấp. <strong><span style="color: #017dc7;">WEB</span> <span style="color: #f68121;">NHANH</span></strong> sẽ thiết kế câu quảng cáo ấn tượng, thu hút để Khách hàng tiềm năng sẽ Click vào quảng cáo và đồng thời sao cho Google đánh giá điểm chất lượng của quảng cáo đạt mức cao nhất.</p>
 										<p>Lượt click vào Quảng cáo sẽ chia ra làm Lượt click hợp lệ và không hợp lệ:</p>
 										<ul>
 											<li>Lượt Click hợp lệ: Cùng một máy tính và địa chỉ IP. Khách hàng click vào quảng cáo 100 lượt cũng chỉ tính là 1 lượt Click hợp lệ. Google chỉ tính 1 phí 1 lượt click hợp lệ.</li>
@@ -1515,7 +1514,7 @@
 											<li>Phụ thuộc vào ngân sách của bạn. Nếu bạn muốn luôn đứng ở vị trí đầu tiên thì bạn phải trả thêm tiền cho Google.</li>
 										</ul>
 										<h3>LÀM SAO ĐỂ BIẾT SỐ TIỀN QUẢNG CÁO GOOGLE ADS CỦA TÔI CÒN HAY HẾT?</h3>
-										<p>Có khá nhiều Khách hàng băn khoăn về vấn đề này, <strong><span style="color: #017dc7;">MINH</span> <span style="color: #f68121;">THUẬN</span></strong> xin được giải thích như sau:</p>
+										<p>Có khá nhiều Khách hàng băn khoăn về vấn đề này, <strong><span style="color: #017dc7;">WEB</span> <span style="color: #f68121;">NHANH</span></strong> xin được giải thích như sau:</p>
 										<p>Với mỗi ngân sách quảng cáo, chúng tôi sẽ chia ra số tiền dành cho Quảng cáo cho 30 ngày (1 tháng), để tính số tiền dành cho 1 ngày.</p>
 										<p>Cuối mỗi chiến dịch quảng cáo chúng tôi sẽ thống kê số tiền còn dư nếu có và chúng tôi sẽ tăng thêm số ngày quảng cáo tương ứng với số tiền còn dư đó.</p>
 										<ul>
@@ -1539,14 +1538,14 @@
 							<div class="rowfooter">
 								<div class="cellfooter cellfooter1">
 									<div class="blockfoot">
-										<p>CTY TNHH DỊCH VỤ QUẢNG CÁO MINH THUẬN</p>
-										<p>Mã số thuế : 0314737404</p>
-										<p>Website: webminhthuan.com - websitere.vn - thietkewebchatluong.net</p>
-										<div class="Cert">
+										<p>DỊCH VỤ LÀM WEBSITE NHANH, WEB WORDPRESS</p>
+										<p>Địa chỉ : mỹ đức - hà nội</p>
+										<p>Website: https://toilamwebnhanh.github.io - https://toilamwebnhanh.blogspot.com</p>
+										<!--<div class="Cert">
 											<div class="Cert1">
-																										<a href="https://www.google.com/partners/agency?id=4610655207" target="_blank">
-															<img src="http://www.gstatic.com/partners/badge/images/2021/PartnerBadgeClickable.svg" height="110"/>
-														</a>
+												<a href="https://www.google.com/partners/agency?id=4610655207" target="_blank">
+												<img src="http://www.gstatic.com/partners/badge/images/2021/PartnerBadgeClickable.svg" height="110"/>
+												</a>
 																								
 											</div>
 											<div class="Cert2">
@@ -1555,29 +1554,29 @@
 										</div>
 										<p>* <strong style="color: #ffff00;">Đối tác cao cấp của GOOGLE</strong> ( xác thực bằng cách khi bấm vào logo GOOGLE PARTNER sẽ link đến trang google.com có chứa hồ sơ thông tin công ty của đối tác )</p>
 									</div>
-								</div>
+								</div>-->
 								<div class="cellfooter cellfooter2">
 									<div class="blockfoot">
-																						<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP TP.HCM :</span>&nbsp;220 / 22 / 22 Âu Cơ, phường 9, quận Tân Bình, TP.HCM <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/g6zSRbgofbwgPhPh6">( xem bản đồ )</a></p>
+												<!--<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP TP.HCM :</span>&nbsp;220 / 22 / 22 Âu Cơ, phường 9, quận Tân Bình, TP.HCM <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/g6zSRbgofbwgPhPh6">( xem bản đồ )</a></p>
 												<p>Hotline : <a href="tel:02866798083" data-mce-href="tel:02866798083">(028) 6679 8083</a> - <a href="tel:0916789032" data-mce-href="tel:0916789032"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">091 6789 032</span></a> - <a href="tel:0975888301" data-mce-href="tel:0975888301"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0975 888 301</span></a></p>
 												<p>
 													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">thuyvy@dangnhanhonline.com</span></bianh>
-												</p>
-												<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Hà Nội :</span>&nbsp;số 25 ngõ 254D đường Minh Khai, quận Hoàng Mai, TP. Hà Nội <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/xYRos1gnuVdYjaYe6">( xem bản đồ )</a></p>
+												</p>-->
+												<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Hà Nội :</span>&nbsp;2 thôn thượng, hồng sơn, mỹ đức, TP. Hà Nội <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/3Vr82NpjrfMxEM6g8">( xem bản đồ )</a></p>
 												<p>
-													Hotline : <a href="tel:0947493366" data-mce-href="tel:0947493366"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4749 3366</span></a> - <a href="tel:0947741199" data-mce-href="tel:0947741199"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4774 1199</span></a>
+													Hotline : <a href="tel:0965059812" data-mce-href="tel:0965059812"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0965059812</span></a> - <a href="tel:0355217613" data-mce-href="tel:0355217613"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0355217613</span></a>
 												</p>
 												<p>
-													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">thong@websitere.vn</span></bianh>
+													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">toilamwebnhanh@gmail.com</span></bianh>
 												</p>
-																				<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Đà Nẵng :</span>&nbsp;57 / 3 Tôn Thất Tùng, quận Thanh Khê, TP. Đà Nẵng <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/dabAted6ooPjVmCi9">( xem bản đồ )</a></p>
+												<!--<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Đà Nẵng :</span>&nbsp;57 / 3 Tôn Thất Tùng, quận Thanh Khê, TP. Đà Nẵng <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/dabAted6ooPjVmCi9">( xem bản đồ )</a></p>
 										<p>
 											Hotline : <a href="tel:0947493366" data-mce-href="tel:0947493366"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4749 3366</span></a>
 										</p>
 										<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Cà Mau :</span>&nbsp;165 Lê Hồng Phong, phường 8, TP. Cà Mau <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/fyPxRPnzywZiu7jW6">( xem bản đồ )</a></p>
 										<p>
 											Hotline : <a href="tel:0945672200" data-mce-href="tel:0945672200"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4567 2200</span></a>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
@@ -1593,8 +1592,8 @@
     <div class="phonering-alo-ph-circle"></div>
     <div class="phonering-alo-ph-circle-fill"></div>
     <div class="phonering-alo-ph-img-circle">
-		<a class="pps-btn-img" onclick="return gtag_report_conversion('tel:0916789032');" href="tel:0916789032">
-			<img alt="Gọi ngay 0916789032" src="images/ph11.png" class="img-responsive">
+		<a class="pps-btn-img" onclick="return gtag_report_conversion('tel:0965059812');" href="tel:0965059812">
+			<img alt="Gọi ngay 0965059812" src="images/ph11.png" class="img-responsive">
 		</a>
 	</div>
 </div>
@@ -1605,13 +1604,14 @@
 		</div>
 		<div class="skypeblock_noidung">
 			<div class="zalo">
-				<a target="_blank" href="http://zalo.me/0975888301"><img alt="Chat Zalo" src="images/support1.png"> 0975888301</a>
+				<a target="_blank" href="http://zalo.me/0965059812"><img alt="Chat Zalo" src="images/support1.png"> 0965059812</a>
 			</div>
 			<div class="facebook">
-				<a target="_blank" href="https://www.messenger.com/t/thietkewebminhthuan"><img alt="Chat Facebook" src="images/support3.png"> thietkewebminhthuan</a>
+				<a target="_blank" href="https://m.me/145573254317329"><img alt="Chat Facebook" src="images/support3.png"> toilamwebnhanh</a>
 			</div>
-					</div>
+		</div>
 	</div>
+</div>
 </div>
 <div class="popupThemes">
 	
@@ -1656,7 +1656,7 @@
 	(function(){
 	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 	s1.async=true;
-	s1.src='https://embed.tawk.to/551c03acdea155ee59f1e2d5/default';
+	s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
 	s1.charset='UTF-8';
 	s1.setAttribute('crossorigin','*');
 	s0.parentNode.insertBefore(s1,s0);
@@ -1664,6 +1664,4 @@
 </script>
 <!--End of Tawk.to Script-->
 	</body>
-
-<!-- Mirrored from webminhthuan.com/quang-cao-google.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:15:35 GMT -->
 </html>
