--- a/thiet-ke-web.html
+++ b/thiet-ke-web.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="vi" xmlns="http://www.w3.org/1999/xhtml">
 	
-<!-- Mirrored from webminhthuan.com/thiet-ke-web.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:10:58 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <link href="images/logo.ico" rel="shortcut icon" type="image/x-icon">
 
-		<title>Công ty thiết kế website giá rẻ</title>
-		<meta name="keywords" content="cong ty thiet ke website gia re">
-		<meta property="og:title" content="Công ty thiết kế website giá rẻ">
+		<title>thiết kế website nhanh giá rẻ</title>
+		<meta name="keywords" content="thiet ke website nhanh gia re">
+		<meta property="og:title" content="thiết kế website nhanh giá rẻ">
 	
-			<meta name="description" content="Chuyên thiết kế website Minh Thuận giá rẻ, đẹp. Website thiết kế luôn chuẩn SEO. Tặng hosting, domain, email theo tên miền, bảo hành website vĩnh viễn. Hỗ trợ 24/7, hosting FPT nhanh nhất Việt Nam.">
-			<meta property="og:description" content="Chuyên thiết kế website Minh Thuận giá rẻ, đẹp. Website thiết kế luôn chuẩn SEO. Tặng hosting, domain, email theo tên miền, bảo hành website vĩnh viễn. Hỗ trợ 24/7, hosting FPT nhanh nhất Việt Nam.">
+			<meta name="description" content="Chuyên thiết kế website wordpress giá rẻ, đẹp. Website thiết kế luôn chuẩn SEO. Tặng hosting, domain, email theo tên miền, bảo hành website vĩnh viễn. Hỗ trợ 24/7, hosting FPT nhanh nhất Việt Nam.">
+			<meta property="og:description" content="Chuyên thiết kế website wordpress giá rẻ, đẹp. Website thiết kế luôn chuẩn SEO. Tặng hosting, domain, email theo tên miền, bảo hành website vĩnh viễn. Hỗ trợ 24/7, hosting FPT nhanh nhất Việt Nam.">
 		<meta property="og:type" content="website">
 <meta property="og:image" content="images/facebookshare.png" />
 <!-- Google Code dành cho Thẻ tiếp thị lại -->
@@ -96,7 +95,7 @@
 	.noidunggiua{margin-top:30px;}
 	.hopbox-tieude{font-size:150%;text-align:left;text-transform:uppercase;font-weight:normal;color:#FF2102;margin-bottom:20px;}
 	.noidunggiua .hopbox{padding-bottom:50px;}
-	.header1{background:#36362e;color:white;padding:5px 0px;font-weight:bold;}
+	.header1{background:#4caf50;color:white;padding:5px 0px;font-weight:bold;}
 	.header1 a{color:white;}
 	.header1 .hopbox-noidung{display:table;margin-left:auto;}
 	.header1 .hopbox-noidung>div{display:table-cell;}
@@ -1315,13 +1314,13 @@
 				<div class="hopbox">
 					<div class="hopbox-noidung">
 						<div class="hotline">
-							<a href="tel:0916789032"><img alt="091 6789 032" src="images/phone.png"> 091 6789 032</a>
+							<a href="tel:0965059812"><img alt="096 5059 812" src="images/phone.png"> 096 5059 812</a>
 						</div>
 						<div class="hotline">
-							<a href="tel:0975888301"><img alt="0975 888 301" src="images/phone.png"> 0975 888 301</a>
+							<a href="tel:0355217613"><img alt="035 5217 613" src="images/phone.png"> 035 5217 613</a>
 						</div>
 						<div class="hotline LastHot">
-							<a href="tel:0947493366"><img alt="09 4749 3366" src="images/phone.png"> 09 4749 3366</a>
+							<a href="tel:0358557305"><img alt="035 8557 305" src="images/phone.png"> 035 8557 305</a>
 						</div>
 					</div>
 				</div>
@@ -1332,7 +1331,7 @@
 				<div class="header2_1">
 					<div class="hopbox">
 						<div class="hopbox-noidung">
-							<a href="index.html"><img alt="Logo thiết kế website Minh Thuận" src="images/logo.png"></a>
+							<a href="index.html"><img alt="Logo thiết kế website Nhanh" src="images/logo.PNG"></a>
 						</div>
 					</div>
 				</div>
@@ -1464,7 +1463,7 @@
 								<h1>Thiết kế web giá rẻ</h1>
 							</div>
 							<div class="hopbox-noidung">
-								<p style="margin-bottom:20px;">Thấu hiểu và đồng cảm cùng sự khó khăn của các doanh nghiệp kinh doanh trong mùa dịch. <strong><span style="color: #017dc7;">MINH</span> <span style="color: #f68121;">THUẬN</span></strong> xin phép cùng chia sẻ và đồng hành cùng quý khách hàng với chính sách giảm giá trực tiếp khi thiết kế website.</p>
+								<p style="margin-bottom:20px;">Thấu hiểu và đồng cảm cùng sự khó khăn của các doanh nghiệp kinh doanh trong mùa dịch. <strong><span style="color: #017dc7;">WEB</span> <span style="color: #f68121;">NHANH</span></strong> xin phép cùng chia sẻ và đồng hành cùng quý khách hàng với chính sách giảm giá trực tiếp khi thiết kế website.</p>
 								<div class="boxbanggia">
 								   <div class="rowbanggia">
 									  <table class="banggiatkw left mce-item-table" style="margin-right: 6%;/* border-radius: 5px; */border: 2px solid #42bacc;width: 47%;color: #555;font-size: 15px;float: left;margin-bottom: 50px;" border="0" cellspacing="0" cellpadding="0">
@@ -1665,7 +1664,7 @@
 									<p style="color: #017dc7;font-weight: bold;font-size: 110%;"><i class="fa fa-edit"></i> Khuyến mãi kèm theo:</p>
 									<p>- Tặng data 400.000 doanh nghiệp tại Việt Nam ( bao gồm tên cty, địa chỉ, số điện thoại, email ... ).</p>
 									<p>- Sau 1 năm hoạt động, hỗ trợ thay đổi giao diện website với mức phí ưu đãi.</p>
-									<p>- Với 10 năm kinh nghiệm, chúng tôi có thể đáp ứng toàn bộ yêu cầu nâng cấp sau này cho website của quý khách với mức phí luôn thấp nhất.</p>
+									<!-- <p>- Với 10 năm kinh nghiệm, chúng tôi có thể đáp ứng toàn bộ yêu cầu nâng cấp sau này cho website của quý khách với mức phí luôn thấp nhất.</p> -->
 								</div>
 								<div class="boxmauweb">
 									<div class="boxmauweb_tieude">
@@ -1737,7 +1736,7 @@
 									<div class="boxmauvisao_block boxmauvisao_show">
 										<h3 style="color: #017dc7;font-weight: bold;font-size: 105%;"><i></i> Kinh nghiệm thiết kế</h3>
 										<div>
-											<p>- Với gần 10 năm kinh nghiệm, đã hoàn thành <strong>3000 website</strong> trên nhiều lĩnh vực khác nhau, Minh Thuận tự tin đáp ứng toàn bộ nhu cầu của khách hàng, có thể tư vấn toàn bộ thông tin, thi công toàn bộ yêu cầu của quý khách.</p>
+											<p>- Với gần 10 năm kinh nghiệm, đã hoàn thành <strong>3000 website</strong> trên nhiều lĩnh vực khác nhau, Web nhanh tự tin đáp ứng toàn bộ nhu cầu của khách hàng, có thể tư vấn toàn bộ thông tin, thi công toàn bộ yêu cầu của quý khách.</p>
 											<p>- Ý tưởng thiết kế được dựa trên yêu cầu, nhu cầu thực tế của khách hàng, mỗi website là một tác phẩm mang tính đặc trưng riêng, không sao chép hoặc tái sử dụng lại.</p>
 											<p>- Hệ thống quản lý tiêu chuẩn thẩm mỹ, kỹ thuật lập trình, tính thân thiện của website với người dùng được tổ chức nghiêm ngặt để đảm bảo quý khách nhận được 1 website chuyên nghiệp nhất.</p>
 										</div>
@@ -1746,15 +1745,15 @@
 										<h3 style="color: #017dc7;font-weight: bold;font-size: 105%;"><i></i> Pháp lý, bảo hành và hậu mãi</h3>
 										<div>
 											<p>- Với mọi dịch vụ của chúng tôi, luôn là bảo hành vĩnh viễn được cam kết rõ trong hợp đồng kinh tế, quý khách hoàn toàn có thể an tâm không bị rủi ro trong quá trình hoạt động không có đơn vị để bảo hành, hỗ trợ cho website của quý khách.</p>
-											<p>- Đội ngũ chăm sóc khách hàng của Minh Thuận luôn luôn lắng nghe, tìm cách giải quyết được những khó khăn của quý khách và luôn có những chương trình khuyến mãi để mang đến cho khách hàng những trải nghiệm mới.</p>
+											<p>- Đội ngũ chăm sóc khách hàng của Web nhanh luôn luôn lắng nghe, tìm cách giải quyết được những khó khăn của quý khách và luôn có những chương trình khuyến mãi để mang đến cho khách hàng những trải nghiệm mới.</p>
 										</div>
 									</div>
 									<div class="boxmauvisao_block">
 										<h3 style="color: #017dc7;font-weight: bold;font-size: 105%;"><i></i> Hosting, Tên miền và Email theo tên miền</h3>
 										<div>
-											<p>- Hosting được đặt tại Data Center của FPT tốc độ luôn là nhanh nhất. Ngoài ra, toàn bộ các gói hosting của Minh Thuận đều có băng thông không giới hạn, tức không giới hạn lưu lượng truy cập, quý khách không ngại phải bị mất thêm phí nâng cấp băng thông khi nhiều lưu lượng truy cập nữa. Đồng thời, đội ngũ quản lý server luôn nghiên cứu, phát triển những ứng dụng, công nghệ mới nhất, để đảm bảo hosting của khách hàng được cải thiện về tốc độ truy cập.</p>
-											<p>- Tên miền hoàn toàn được đăng ký với thông tin sở hữu của khách hàng và đối với tên miền quốc tế được Minh Thuận thông báo sử dụng tại thongbaotenmien.vn theo quy định của <strong>Bộ Thông Tin Và Truyền Thông</strong>.</p>
-											<p>- Minh Thuận khuyến khích khách hàng sử dụng email theo tên miền ( ví dụ: giamdoc@congtydichvu.com, kythuat@congtydichvu.com ) vì chúng tôi miễn phí, mỗi email đạt dung lượng sử dụng đến 5 Gb riêng biệt. Email theo tên miền sẽ giúp hoạt động kinh doanh của quý khách chuyên nghiệp hơn, hãy tưởng tượng khi khách hàng của mình lên website đặt mua hàng, sau đó nhận được thư trả lời từ email theo tên miền của mình, họ sẽ đánh giá dịch vụ của mình chuyên nghiệp, và không sợ email nặc danh từ đơn vị khác.</p>
+											<p>- Hosting được đặt tại Data Center của FPT tốc độ luôn là nhanh nhất. Ngoài ra, toàn bộ các gói hosting của Web nhanh đều có băng thông không giới hạn, tức không giới hạn lưu lượng truy cập, quý khách không ngại phải bị mất thêm phí nâng cấp băng thông khi nhiều lưu lượng truy cập nữa. Đồng thời, đội ngũ quản lý server luôn nghiên cứu, phát triển những ứng dụng, công nghệ mới nhất, để đảm bảo hosting của khách hàng được cải thiện về tốc độ truy cập.</p>
+											<p>- Tên miền hoàn toàn được đăng ký với thông tin sở hữu của khách hàng và đối với tên miền quốc tế được Web nhanh thông báo sử dụng tại thongbaotenmien.vn theo quy định của <strong>Bộ Thông Tin Và Truyền Thông</strong>.</p>
+											<p>- Web nhanh khuyến khích khách hàng sử dụng email theo tên miền ( ví dụ: giamdoc@congtydichvu.com, kythuat@congtydichvu.com ) vì chúng tôi miễn phí, mỗi email đạt dung lượng sử dụng đến 5 Gb riêng biệt. Email theo tên miền sẽ giúp hoạt động kinh doanh của quý khách chuyên nghiệp hơn, hãy tưởng tượng khi khách hàng của mình lên website đặt mua hàng, sau đó nhận được thư trả lời từ email theo tên miền của mình, họ sẽ đánh giá dịch vụ của mình chuyên nghiệp, và không sợ email nặc danh từ đơn vị khác.</p>
 										</div>
 									</div>
 									<div class="boxmauvisao_block">
@@ -1779,14 +1778,14 @@
 							<div class="rowfooter">
 								<div class="cellfooter cellfooter1">
 									<div class="blockfoot">
-										<p>CTY TNHH DỊCH VỤ QUẢNG CÁO MINH THUẬN</p>
-										<p>Mã số thuế : 0314737404</p>
-										<p>Website: webminhthuan.com - websitere.vn - thietkewebchatluong.net</p>
-										<div class="Cert">
+										<p>DỊCH VỤ LÀM WEBSITE NHANH, WEB WORDPRESS</p>
+										<p>Địa chỉ : mỹ đức - hà nội</p>
+										<p>Website: https://toilamwebnhanh.github.io - https://toilamwebnhanh.blogspot.com</p>
+										<!--<div class="Cert">
 											<div class="Cert1">
-																										<a href="https://www.google.com/partners/agency?id=4610655207" target="_blank">
-															<img src="http://www.gstatic.com/partners/badge/images/2021/PartnerBadgeClickable.svg" height="110"/>
-														</a>
+												<a href="https://www.google.com/partners/agency?id=4610655207" target="_blank">
+												<img src="http://www.gstatic.com/partners/badge/images/2021/PartnerBadgeClickable.svg" height="110"/>
+												</a>
 																								
 											</div>
 											<div class="Cert2">
@@ -1795,29 +1794,29 @@
 										</div>
 										<p>* <strong style="color: #ffff00;">Đối tác cao cấp của GOOGLE</strong> ( xác thực bằng cách khi bấm vào logo GOOGLE PARTNER sẽ link đến trang google.com có chứa hồ sơ thông tin công ty của đối tác )</p>
 									</div>
-								</div>
+								</div>-->
 								<div class="cellfooter cellfooter2">
 									<div class="blockfoot">
-																						<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP TP.HCM :</span>&nbsp;220 / 22 / 22 Âu Cơ, phường 9, quận Tân Bình, TP.HCM <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/g6zSRbgofbwgPhPh6">( xem bản đồ )</a></p>
+												<!--<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP TP.HCM :</span>&nbsp;220 / 22 / 22 Âu Cơ, phường 9, quận Tân Bình, TP.HCM <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/g6zSRbgofbwgPhPh6">( xem bản đồ )</a></p>
 												<p>Hotline : <a href="tel:02866798083" data-mce-href="tel:02866798083">(028) 6679 8083</a> - <a href="tel:0916789032" data-mce-href="tel:0916789032"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">091 6789 032</span></a> - <a href="tel:0975888301" data-mce-href="tel:0975888301"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0975 888 301</span></a></p>
 												<p>
 													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">thuyvy@dangnhanhonline.com</span></bianh>
-												</p>
-												<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Hà Nội :</span>&nbsp;số 25 ngõ 254D đường Minh Khai, quận Hoàng Mai, TP. Hà Nội <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/xYRos1gnuVdYjaYe6">( xem bản đồ )</a></p>
+												</p>-->
+												<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Hà Nội :</span>&nbsp;2 thôn thượng, hồng sơn, mỹ đức, TP. Hà Nội <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/3Vr82NpjrfMxEM6g8">( xem bản đồ )</a></p>
 												<p>
-													Hotline : <a href="tel:0947493366" data-mce-href="tel:0947493366"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4749 3366</span></a> - <a href="tel:0947741199" data-mce-href="tel:0947741199"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4774 1199</span></a>
+													Hotline : <a href="tel:0965059812" data-mce-href="tel:0965059812"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0965059812</span></a> - <a href="tel:0355217613" data-mce-href="tel:0355217613"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0355217613</span></a>
 												</p>
 												<p>
-													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">thong@websitere.vn</span></bianh>
+													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">toilamwebnhanh@gmail.com</span></bianh>
 												</p>
-																				<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Đà Nẵng :</span>&nbsp;57 / 3 Tôn Thất Tùng, quận Thanh Khê, TP. Đà Nẵng <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/dabAted6ooPjVmCi9">( xem bản đồ )</a></p>
+												<!--<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Đà Nẵng :</span>&nbsp;57 / 3 Tôn Thất Tùng, quận Thanh Khê, TP. Đà Nẵng <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/dabAted6ooPjVmCi9">( xem bản đồ )</a></p>
 										<p>
 											Hotline : <a href="tel:0947493366" data-mce-href="tel:0947493366"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4749 3366</span></a>
 										</p>
 										<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Cà Mau :</span>&nbsp;165 Lê Hồng Phong, phường 8, TP. Cà Mau <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/fyPxRPnzywZiu7jW6">( xem bản đồ )</a></p>
 										<p>
 											Hotline : <a href="tel:0945672200" data-mce-href="tel:0945672200"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4567 2200</span></a>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
@@ -1833,8 +1832,8 @@
     <div class="phonering-alo-ph-circle"></div>
     <div class="phonering-alo-ph-circle-fill"></div>
     <div class="phonering-alo-ph-img-circle">
-		<a class="pps-btn-img" onclick="return gtag_report_conversion('tel:0916789032');" href="tel:0916789032">
-			<img alt="Gọi ngay 0916789032" src="images/ph11.png" class="img-responsive">
+		<a class="pps-btn-img" onclick="return gtag_report_conversion('tel:0965059812');" href="tel:0965059812">
+			<img alt="Gọi ngay 0965059812" src="images/ph11.png" class="img-responsive">
 		</a>
 	</div>
 </div>
@@ -1845,13 +1844,14 @@
 		</div>
 		<div class="skypeblock_noidung">
 			<div class="zalo">
-				<a target="_blank" href="http://zalo.me/0975888301"><img alt="Chat Zalo" src="images/support1.png"> 0975888301</a>
+				<a target="_blank" href="http://zalo.me/0965059812"><img alt="Chat Zalo" src="images/support1.png"> 0965059812</a>
 			</div>
 			<div class="facebook">
-				<a target="_blank" href="https://www.messenger.com/t/thietkewebminhthuan"><img alt="Chat Facebook" src="images/support3.png"> thietkewebminhthuan</a>
+				<a target="_blank" href="https://m.me/145573254317329"><img alt="Chat Facebook" src="images/support3.png"> toilamwebnhanh</a>
 			</div>
-					</div>
+		</div>
 	</div>
+</div>
 </div>
 <div class="popupThemes">
 	
@@ -1896,7 +1896,7 @@
 	(function(){
 	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 	s1.async=true;
-	s1.src='https://embed.tawk.to/551c03acdea155ee59f1e2d5/default';
+	s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
 	s1.charset='UTF-8';
 	s1.setAttribute('crossorigin','*');
 	s0.parentNode.insertBefore(s1,s0);
@@ -1904,6 +1904,4 @@
 </script>
 <!--End of Tawk.to Script-->
 	</body>
-
-<!-- Mirrored from webminhthuan.com/thiet-ke-web.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:11:00 GMT -->
 </html>
