--- a/mau-website-28-p18.html
+++ b/mau-website-28-p18.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="vi-VN" class="fa-events-icons-ready">
 	
-<!-- Mirrored from webminhthuan.com/mau-website-28-p18.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:19:24 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <link href="images/logo.ico" rel="shortcut icon" type="image/x-icon">
 
-		<title>Thiết kế web Minh Thuận</title>
+		<title>Thiết kế web nhanh uy tín</title>
 		<meta name="keywords" content="cong ty thiet ke website gia re">
-		<meta property="og:title" content="Thiết kế web Minh Thuận">
+		<meta property="og:title" content="Thiết kế web wordpress">
 	<meta property="og:type" content="website">
 <meta property="og:image" content="images/facebookshare.png" />
 <!-- Google Code dành cho Thẻ tiếp thị lại -->
@@ -93,7 +92,7 @@
 	.noidunggiua{margin-top:30px;}
 	.hopbox-tieude{font-size:150%;text-align:left;text-transform:uppercase;font-weight:normal;color:#FF2102;margin-bottom:20px;}
 	.noidunggiua .hopbox{padding-bottom:50px;}
-	.header1{background:#36362e;color:white;padding:5px 0px;font-weight:bold;}
+	.header1{background:#4caf50;color:white;padding:5px 0px;font-weight:bold;}
 	.header1 a{color:white;}
 	.header1 .hopbox-noidung{display:table;margin-left:auto;}
 	.header1 .hopbox-noidung>div{display:table-cell;}
@@ -1329,7 +1328,7 @@
 				<div class="header2_1">
 					<div class="hopbox">
 						<div class="hopbox-noidung">
-							<a href="index.html"><img alt="Logo thiết kế website Minh Thuận" src="images/logo.png"></a>
+							<a href="index.html"><img alt="Logo thiết kế website Nhanh" src="images/logo.PNG"></a>
 						</div>
 					</div>
 				</div>
@@ -2209,7 +2208,7 @@
 	(function(){
 	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 	s1.async=true;
-	s1.src='https://embed.tawk.to/551c03acdea155ee59f1e2d5/default';
+	s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
 	s1.charset='UTF-8';
 	s1.setAttribute('crossorigin','*');
 	s0.parentNode.insertBefore(s1,s0);
