--- a/mau-website-0-p72.html
+++ b/mau-website-0-p72.html
@@ -1819,8 +1819,8 @@
 															<a target="_blank" href='http://ws12109.dangnhanhonline.com/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/294/300_1/jpg/thiet-ke-website-webquatang-com-vn_300x300.jpg" alt="Thiết kế website webquatang.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/294/300_1/jpg/thiet-ke-website-webquatang-com-vn_300x300.jpg" alt="Thiết kế website webquatang.com.vn"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/294/300_1/jpg/thiet-ke-website-webquatang-com-vn_300x300.jpg" alt="Thiết kế website webquatang.com.vn">
+																		<noscript><img src="../files/sanpham/294/300_1/jpg/thiet-ke-website-webquatang-com-vn_300x300.jpg" alt="Thiết kế website webquatang.com.vn"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
