--- a/mau-website-0-p72.html
+++ b/mau-website-0-p72.html
@@ -1834,8 +1834,8 @@
 															<a target="_blank" href='http://caysuadolongson.com.vn/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/293/300_1/jpg/thiet-ke-website-caysuadolongson-com-vn_300x300.jpg" alt="Thiết kế website caysuadolongson.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/293/300_1/jpg/thiet-ke-website-caysuadolongson-com-vn_300x300.jpg" alt="Thiết kế website caysuadolongson.com.vn"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/293/300_1/jpg/aomua.jpg" alt="Thiết kế website caysuadolongson.com.vn">
+																		<noscript><img src="../files/sanpham/293/300_1/jpg/aomua.jpg" alt="Thiết kế website caysuadolongson.com.vn"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
@@ -1849,8 +1849,8 @@
 															<a target="_blank" href='http://ws12106.dangnhanhonline.com/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/292/300_1/jpg/thiet-ke-website-namquocviet-com_300x300.jpg" alt="Thiết kế website namquocviet.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/292/300_1/jpg/thiet-ke-website-namquocviet-com_300x300.jpg" alt="Thiết kế website namquocviet.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/292/300_1/jpg/thiet-ke-website-namquocviet-com_300x300.jpg" alt="Thiết kế website namquocviet.com">
+																		<noscript><img src="..files/sanpham/292/300_1/jpg/thiet-ke-website-namquocviet-com_300x300.jpg" alt="Thiết kế website namquocviet.com"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
